--- a/QBert/QBert.vcxproj.filters
+++ b/QBert/QBert.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="QBertStates.cpp">
       <Filter>Source Files\States</Filter>
     </ClCompile>
+    <ClCompile Include="CurseComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Minigin\Level.h">
@@ -85,6 +88,9 @@
     </ClInclude>
     <ClInclude Include="QBertStates.h">
       <Filter>Header Files\States</Filter>
+    </ClInclude>
+    <ClInclude Include="CurseComponent.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
