--- a/QBert/QBert.vcxproj
+++ b/QBert/QBert.vcxproj
@@ -183,9 +183,11 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     <ClCompile Include="..\Minigin\Level.cpp" />
     <ClCompile Include="..\Minigin\MoveCommand.cpp" />
     <ClCompile Include="CurseComponent.cpp" />
+    <ClCompile Include="LevelLoader.cpp" />
     <ClCompile Include="QBert.cpp" />
     <ClCompile Include="QbertComponent.cpp" />
     <ClCompile Include="QBertStates.cpp" />
+    <ClCompile Include="SkipLevelCommand.cpp" />
     <ClCompile Include="State.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -195,10 +197,13 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     <ClInclude Include="CommandIncludes.h" />
     <ClInclude Include="ComponentIncludes.h" />
     <ClInclude Include="CurseComponent.h" />
+    <ClInclude Include="LevelLoader.h" />
     <ClInclude Include="ManagerIncludes.h" />
     <ClInclude Include="QbertComponent.h" />
     <ClInclude Include="QBertStates.h" />
+    <ClInclude Include="SkipLevelCommand.h" />
     <ClInclude Include="State.h" />
+    <ClInclude Include="QbertStructs.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
