--- a/QBert/QBert.vcxproj.filters
+++ b/QBert/QBert.vcxproj.filters
@@ -107,5 +107,8 @@
     <ClInclude Include="SkipLevelCommand.h">
       <Filter>Header Files\Commands</Filter>
     </ClInclude>
+    <ClInclude Include="SFXEnum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
