Added mute button

--- a/QBert/QBert.vcxproj
+++ b/QBert/QBert.vcxproj
@@ -184,6 +184,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     <ClCompile Include="..\Minigin\MoveCommand.cpp" />
     <ClCompile Include="CurseComponent.cpp" />
     <ClCompile Include="LevelLoader.cpp" />
+    <ClCompile Include="MuteCommand.cpp" />
     <ClCompile Include="QBert.cpp" />
     <ClCompile Include="QbertComponent.cpp" />
     <ClCompile Include="QBertStates.cpp" />
@@ -199,6 +200,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     <ClInclude Include="CurseComponent.h" />
     <ClInclude Include="LevelLoader.h" />
     <ClInclude Include="ManagerIncludes.h" />
+    <ClInclude Include="MuteCommand.h" />
     <ClInclude Include="QbertComponent.h" />
     <ClInclude Include="QBertStates.h" />
     <ClInclude Include="SFXEnum.h" />
