--- a/QBert/QBert.vcxproj
+++ b/QBert/QBert.vcxproj
@@ -182,6 +182,8 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     <ClCompile Include="..\Minigin\Command.cpp" />
     <ClCompile Include="..\Minigin\Level.cpp" />
     <ClCompile Include="..\Minigin\MoveCommand.cpp" />
+    <ClCompile Include="CoilyComponent.cpp" />
+    <ClCompile Include="CoilyStates.cpp" />
     <ClCompile Include="CountersComponent.cpp" />
     <ClCompile Include="CurseComponent.cpp" />
     <ClCompile Include="HUDComponent.cpp" />
@@ -190,6 +192,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     <ClCompile Include="QBert.cpp" />
     <ClCompile Include="QbertComponent.cpp" />
     <ClCompile Include="QBertStates.cpp" />
+    <ClCompile Include="QbertStructs.cpp" />
     <ClCompile Include="SkipLevelCommand.cpp" />
     <ClCompile Include="State.cpp" />
   </ItemGroup>
@@ -197,6 +200,8 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     <ClInclude Include="..\Minigin\Command.h" />
     <ClInclude Include="..\Minigin\Level.h" />
     <ClInclude Include="..\Minigin\MoveCommand.h" />
+    <ClInclude Include="CoilyComponent.h" />
+    <ClInclude Include="CoilyStates.h" />
     <ClInclude Include="CommandIncludes.h" />
     <ClInclude Include="ComponentIncludes.h" />
     <ClInclude Include="CountersComponent.h" />
